--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -19,13 +18,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".LoginActivity"  android:exported="true"/>
         <activity android:name=".HomeActivity"  android:exported="true"/>
         <activity android:name=".RegisterActivity"  android:exported="true"/>
         <activity android:name=".CheckBalanceActivity"  android:exported="true"/>
-        <activity android:name=".DepositActivity"  android:exported="true"/>
-        <activity android:name=".WithdrawActivity"  android:exported="true"/>
+
+        <activity android:name=".BeneficiaryManagementActivity"  android:exported="true"/>
+        <activity android:name=".TransferActivity"  android:exported="true"/>
+        <activity android:name=".GovtActivity"  android:exported="true"/>
+        <activity android:name=".TransferMoneyActivity"  android:exported="true"/>
+
+
+
 
     </application>
 
